# QuantRL

./: .gitignore  Dockerfile  EVALUATION_REPORT.md  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_backend.py
.github/workflows/: deploy.yml
env/: __init__.py  environment.py  market.py  models.py  tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
server/: app.py
