[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-trading-agent-env"
version = "1.0.0"
description = "OpenEnv environment for AI stock trading agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["openenv", "stock-trading", "reinforcement-learning", "finance"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.14.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[project.scripts]
serve  = "app:main"
server = "server.app:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["env*", "server*"]

[tool.openenv]
entry_point = "main:app"
app_port    = 7860
sdk         = "docker"
